Hack around loop ending too soon, 2 tests pass